# PixTxt

./: CMakeLists.txt  Color_8hpp_source.html  Doxyfile  PbmFileError_8hpp_source.html  PixelFontError_8hpp_source.html  Pixel_8hpp_source.html  Position_8hpp_source.html  README.md  annotated.html  classes.html  classpixtxt_1_1PbmFileError-members.html  classpixtxt_1_1PbmFileError.html  classpixtxt_1_1PixelFontError-members.html  classpixtxt_1_1PixelFontError.html  classpixtxt_1_1dense_1_1PixelFont-members.html  classpixtxt_1_1dense_1_1PixelFont.html  classpixtxt_1_1dense_1_1PixelText-members.html  classpixtxt_1_1dense_1_1PixelText.html  classpixtxt_1_1sparse_1_1PixelFont-members.html  classpixtxt_1_1sparse_1_1PixelFont.html  classpixtxt_1_1sparse_1_1PixelText-members.html  classpixtxt_1_1sparse_1_1PixelText.html  dense_2PixelFont_8hpp_source.html  dense_2PixelText_8hpp_source.html  dir_047344972e320f29ea476f7e653f1b5b.html  dir_2adf0a268a53a8be14e203c791737bdb.html  dir_9f7ee831a3df6d9166b1ebff8d061181.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  font.pbm  font.xcf  functions.html  functions_func.html  hierarchy.html  index.html  sparse_2PixelFont_8hpp_source.html  sparse_2PixelText_8hpp_source.html  string__util_8hpp_source.html  structpixtxt_1_1Color-members.html  (+5 more)
example/: main.cpp
examples/: sfml_example.cpp  spng_example.cpp
include/: PbmImage.hpp  Pixel.hpp
include/dense/: PixelFont.hpp  PixelText.hpp  SubpixelColumnIterator.hpp  SubpixelColumns.hpp
include/pixtxt/: Color.hpp  PbmFileError.hpp  Pixel.hpp  PixelFontError.hpp  Position.hpp  string_util.hpp
include/pixtxt/dense/: PixelFont.hpp  PixelText.hpp
include/pixtxt/sparse/: PixelFont.hpp  PixelText.hpp
include/sparse/: PixelFont.hpp  PixelText.hpp
search/: all_0.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_c.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
src/: PbmImage.cpp  PbmImage.hpp  main.cpp
src/dense/: PixelFont.cpp  PixelFont.hpp  PixelText.cpp  PixelText.hpp  SubpixelColumnIterator.cpp  SubpixelColumnIterator.hpp  SubpixelColumns.hpp
src/sparse/: PixelFont.cpp  PixelFont.hpp  PixelText.cpp  PixelText.hpp  definitions.hpp
